Renaming all notebooks with expressive and machine-readable file names

--- a/00_make_files_machine_readable.ipynb
+++ b/00_make_files_machine_readable.ipynb
@@ -40,6 +40,15 @@
     },
     {
       "cell_type": "markdown",
+      "id": "fd818877",
+      "metadata": {},
+      "source": [
+        "> This Jupyter Notebook does not have a machine-readable name. \n",
+        "The orginial name is `00 START HERE: Make sure your file names are machine-readable.ipynb` and thus contains a character (:) and spaces which can cause problems when processed by computer systems."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "09d076a4-e009-495c-a284-bc8760e7ac78",
       "metadata": {},
       "source": [
@@ -48,13 +57,33 @@
         "> Rename any notebooks in this folder with an **expressive and\n",
         "> machine-readable file name**"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "feb95415",
+      "metadata": {},
+      "source": [
+        "> Notebooks have been renamed. All notebooks related to the Climate Coding Challenge begin with the part number and “ccc” (Climate Coding Challenge), followed by a keyword/focus of the respective notebook. The two notebooks that are not part of the Coding Challenge have also been renamed, but without a number, only with the focus as the name."
+      ]
     }
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "base",
       "language": "python",
       "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.6"
     }
   },
   "nbformat": 4,
