Part 1 - my answers to climate change affects on my home

--- a/01_ccc_climate_change_affects.ipynb
+++ b/01_ccc_climate_change_affects.ipynb
@@ -24,7 +24,14 @@
       "id": "81f83cfa-4094-444a-b364-576e7ce1401a",
       "metadata": {},
       "source": [
-        "# YOUR ANSWER HERE"
+        "# MY ANSWER\n",
+        "My home is Frankfurt (Germany)\n",
+        "\n",
+        "* Higher temperatures in summer.\n",
+        "* Almost no snow in winter anymore.\n",
+        "* Seasons such as spring are becoming shorter, while summer is becoming longer.\n",
+        "* Very dry periods, has an effect on private gardens as well as agriculture.\n",
+        "* More extreme temperature fluctuations."
       ]
     },
     {
