get climate data boulder and frankfurt

--- a/ncei_climate_data_download.ipynb
+++ b/ncei_climate_data_download.ipynb
@@ -2,6 +2,7 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "id": "f953ad73-a8e9-458c-9a71-8c25e8023470",
       "metadata": {},
       "source": [
         "# Get Climate Data Online\n",
@@ -46,19 +47,26 @@
         "<li>what the maximum temperature units are</li>\n",
         "<li>how the data are collected</li>\n",
         "</ul></div></div>"
-      ],
-      "id": "f953ad73-a8e9-458c-9a71-8c25e8023470"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "b07943d0-6b33-4fc0-9f91-6cc8b6198a2c",
       "metadata": {},
       "source": [
-        "**YOUR DATA DESCRIPTION AND CITATION HERE** 🛎️"
-      ],
-      "id": "b07943d0-6b33-4fc0-9f91-6cc8b6198a2c"
+        "**YOUR DATA DESCRIPTION AND CITATION HERE** 🛎️\n",
+        "\n",
+        "For the GHCN (Global Historical Climatology Network)- Daily database, daily climate observations are integrated from apporcimately 30 different data soruces. This dataset contains station-based measurements from more than 90,000 land-based stations wordwide. \n",
+        "The maximum temperature (TMAX) units can be Fahrenheit or Celcius (as per user preference) to the tenths. The GHCNd receives daily updates from a variety of data streams. \n",
+        "\n",
+        "\n",
+        "Citation:\n",
+        "Menne, Matthew J., Imke Durre, Bryant Korzeniewski, Shelley McNeill, Kristy Thomas, Xungang Yin, Steven Anthony, Ron Ray, Russell S. Vose, Byron E.Gleason, and Tamara G. Houston (2012): Global Historical Climatology Network - Daily (GHCN-Daily), Version 3. [indicate subset used]. NOAA National Climatic Data Center. doi:10.7289/V5D21VHZ [last access: 2025-09-22]"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "80186d1c-03b8-44cc-9f98-96b54f6f1e5e",
       "metadata": {},
       "source": [
         "## Access NCEI GHCNd Data from the internet using its API 🖥️ 📡 🖥️\n",
@@ -78,21 +86,23 @@
         "First things first – you will need to import the `earthpy` library to\n",
         "help with data management and the `pandas` library to work with tabular\n",
         "data:"
-      ],
-      "id": "80186d1c-03b8-44cc-9f98-96b54f6f1e5e"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
+      "id": "c72d1b48",
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Import required packages"
-      ],
-      "id": "c72d1b48"
+        "# Import required packages\n",
+        "import earthpy\n",
+        "import pandas as pd "
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "a891ddd2-5fc1-4e87-a774-e09f563fd1ae",
       "metadata": {},
       "source": [
         "The cell below contains the URL you will use to download climate data.\n",
@@ -114,25 +124,63 @@
         "<li>Replace ‘DATATYPE’, ‘STATION’, and the start and end dates\n",
         "‘YYYY-MM-DD’, with the values for the data you want to download.</li>\n",
         "</ol></div></div>"
-      ],
-      "id": "a891ddd2-5fc1-4e87-a774-e09f563fd1ae"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
+      "id": "304635fa",
       "metadata": {
         "template": "student"
       },
-      "outputs": [],
-      "source": [
-        "stuff23 = ('https://www.ncei.noaa.gov/access/services/da'\n",
-        "'ta/v1?dataset=daily-summaries&dataTypes=DATATYPE&stations=STATION&startDate=YYYY-MM-DD&endDate=YYYY-MM-DD&units=standard')\n",
-        "stuff23"
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'https://www.ncei.noaa.gov/access/services/data/v1?dataset=daily-summaries&dataTypes=TOBS&stations=USC00050848&startDate=1901-01-01&endDate=2025-09-20&units=standard'"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
       ],
-      "id": "304635fa"
+      "source": [
+        "boulder_ncei_url = ('https://www.ncei.noaa.gov/access/services/data/v1'\n",
+        "                    '?dataset=daily-summaries&dataTypes=TOBS&'\n",
+        "                    'stations=USC00050848&startDate=1901-01-01&'\n",
+        "                    'endDate=2025-09-20&units=standard')\n",
+        "boulder_ncei_url"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "id": "97cfceaf",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'https://www.ncei.noaa.gov/access/services/data/v1?dataset=daily-summaries&dataTypes=TAVG&stations=GMW00035032&startDate=1934-05-01&endDate=2025-08-24&units=standard'"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "frankfurt_ncei_url = ('https://www.ncei.noaa.gov/access/services/data/v1'\n",
+        "                    '?dataset=daily-summaries&dataTypes=TAVG&'\n",
+        "                    'stations=GMW00035032&startDate=1934-05-01&'\n",
+        "                    'endDate=2025-08-24&units=standard')\n",
+        "frankfurt_ncei_url"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "70f7c8e5-e983-40b6-8d7d-f18c86a8f9bd",
       "metadata": {},
       "source": [
         "## Get NCEI data using the API\n",
@@ -141,32 +189,201 @@
         "<li>Replace <code>url</code> with the name of your URL</li>\n",
         "<li>Run the code to download and check your data</li>\n",
         "</ol></div></div>"
-      ],
-      "id": "70f7c8e5-e983-40b6-8d7d-f18c86a8f9bd"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
+      "id": "2056b44a",
       "metadata": {
         "template": "student"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>STATION</th>\n",
+              "      <th>TOBS</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>DATE</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1901-01-01</th>\n",
+              "      <td>USC00050848</td>\n",
+              "      <td>7.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1901-01-02</th>\n",
+              "      <td>USC00050848</td>\n",
+              "      <td>25.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1901-01-03</th>\n",
+              "      <td>USC00050848</td>\n",
+              "      <td>48.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1901-01-04</th>\n",
+              "      <td>USC00050848</td>\n",
+              "      <td>43.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1901-01-05</th>\n",
+              "      <td>USC00050848</td>\n",
+              "      <td>47.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                STATION  TOBS\n",
+              "DATE                         \n",
+              "1901-01-01  USC00050848   7.0\n",
+              "1901-01-02  USC00050848  25.0\n",
+              "1901-01-03  USC00050848  48.0\n",
+              "1901-01-04  USC00050848  43.0\n",
+              "1901-01-05  USC00050848  47.0"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Download the climate data\n",
-        "climate_df = pd.read_csv(\n",
-        "    url,\n",
+        "boulder_climate_df = pd.read_csv(\n",
+        "    boulder_ncei_url,\n",
         "    index_col='DATE',\n",
         "    parse_dates=True,\n",
         "    na_values=['NaN']\n",
         ")\n",
         "\n",
         "# Check that the download worked\n",
-        "climate_df.head()"
+        "boulder_climate_df.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "id": "e7777557",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>STATION</th>\n",
+              "      <th>TAVG</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>DATE</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1934-05-01</th>\n",
+              "      <td>GMW00035032</td>\n",
+              "      <td>70.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1934-05-02</th>\n",
+              "      <td>GMW00035032</td>\n",
+              "      <td>67.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1934-05-03</th>\n",
+              "      <td>GMW00035032</td>\n",
+              "      <td>64.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1934-05-04</th>\n",
+              "      <td>GMW00035032</td>\n",
+              "      <td>58.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1934-05-05</th>\n",
+              "      <td>GMW00035032</td>\n",
+              "      <td>61.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                STATION  TAVG\n",
+              "DATE                         \n",
+              "1934-05-01  GMW00035032  70.0\n",
+              "1934-05-02  GMW00035032  67.0\n",
+              "1934-05-03  GMW00035032  64.0\n",
+              "1934-05-04  GMW00035032  58.0\n",
+              "1934-05-05  GMW00035032  61.0"
+            ]
+          },
+          "execution_count": 5,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
       ],
-      "id": "2056b44a"
+      "source": [
+        "# Download the climate data\n",
+        "frankfurt_climate_df = pd.read_csv(\n",
+        "    frankfurt_ncei_url,\n",
+        "    index_col='DATE',\n",
+        "    parse_dates=True,\n",
+        "    na_values=['NaN']\n",
+        ")\n",
+        "\n",
+        "# Check that the download worked\n",
+        "frankfurt_climate_df.head()\n"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "9549c015-61b0-44ff-aecc-5bb874800c1d",
       "metadata": {},
       "source": [
         "## Save climate data to your computer\n",
@@ -187,24 +404,25 @@
         "> For this activity it’s fine, but as a general rule you don’t want to\n",
         "> upload data files to a GitHub repository! You can get into a situation\n",
         "> where it’s impossible to upload to GitHub."
-      ],
-      "id": "9549c015-61b0-44ff-aecc-5bb874800c1d"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 6,
+      "id": "90920cb9",
       "metadata": {
         "template": "student"
       },
       "outputs": [],
       "source": [
         "# Save the climate data\n",
-        "climate_df.to_csv('filename')"
-      ],
-      "id": "90920cb9"
+        "boulder_climate_df.to_csv('boulder_temp_data')\n",
+        "frankfurt_climate_df.to_csv('frankfurt_temp_data')"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "3d33d65a-5107-450e-b7cd-98ef5643f07e",
       "metadata": {},
       "source": [
         "# STEP -1: Wrap up\n",
@@ -212,48 +430,56 @@
         "Don’t forget to store your variables so you can use them in other\n",
         "notebooks! Replace `var1` and `var2` with the variable you want to save,\n",
         "separated by spaces."
-      ],
-      "id": "3d33d65a-5107-450e-b7cd-98ef5643f07e"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 7,
+      "id": "62f538c1",
       "metadata": {},
-      "outputs": [],
-      "source": [
-        "%store var1 var2"
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Stored 'boulder_climate_df' (DataFrame)\n",
+            "Stored 'frankfurt_climate_df' (DataFrame)\n"
+          ]
+        }
       ],
-      "id": "62f538c1"
+      "source": [
+        "%store boulder_climate_df frankfurt_climate_df"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "8650476f-3f75-4964-abde-94c8ded41d9a",
       "metadata": {},
       "source": [
         "Finally, be sure to `Restart` and `Run all` to make sure your notebook\n",
         "works all the way through!"
-      ],
-      "id": "8650476f-3f75-4964-abde-94c8ded41d9a"
+      ]
     }
   ],
-  "nbformat": 4,
-  "nbformat_minor": 5,
   "metadata": {
     "kernelspec": {
-      "name": "learning-portal",
-      "display_name": "Learning Portal",
-      "language": "python"
+      "display_name": "base",
+      "language": "python",
+      "name": "python3"
     },
     "language_info": {
-      "name": "python",
       "codemirror_mode": {
         "name": "ipython",
-        "version": "3"
+        "version": 3
       },
       "file_extension": ".py",
       "mimetype": "text/x-python",
+      "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.13"
+      "version": "3.11.6"
     }
-  }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
