--- a/06_climate_change_portfolio.ipynb
+++ b/06_climate_change_portfolio.ipynb
@@ -1076,7 +1076,42 @@
     "shows that both temperatures exhibit a positive trend, which can be linked\n",
     "to climate change. The trend in maximum temperature shows a slightly \n",
     "stronger increase (0.0221 degrees per year) than the trend in minimum \n",
-    "temperature (0.0184 degrees per year).\n"
+    "temperature (0.0184 degrees per year).\n",
+    "\n",
+    "The results of this analysis, with a stronger increase in the trend of \n",
+    "maximum temperatures than in the trend of minimum temperatures, indicate \n",
+    "an increase in diurnal temperature range (DTR). This would contradict the \n",
+    "results of a study by Karl et al. (1993), which assumes a decrease in DTR \n",
+    "on a global average, mainly based on a stronger warming of the nighttime \n",
+    "temperature (minimum), which is thought to be related to increased cloud cover.\n",
+    "However, recent studies by Zhong et al. (2023) and Liu et al. (2024) show \n",
+    "that this trend has reversed since the 1980s, with an increase in DTR, \n",
+    "mainly due to accelerated warming of the maximum daily temperature. This \n",
+    "is thought to be related to a decrease in global cloud cover and the \n",
+    "associated increase in solar radiation. \n",
+    "\n",
+    "If one looks at the annual average maximum and minimum temperatures at \n",
+    "the Kleiner Feldberg, one can also see that the positive trend since around \n",
+    "the mid-1970s appears more pronounced than before. For a more detailed \n",
+    "analysis, the trend can be divided into two parts (for example, before \n",
+    "and after the 70s/80s) or a polynomial trend can be determined instead \n",
+    "of a linear trend. \n",
+    "\n",
+    "\n",
+    "Karl, Thomas R.; Jones, Philip D., Knight, Richard W., Kukla, George, \n",
+    "Plummer, Neil, Razuvayev, Vyacheslav, Gallo, Kevin P ., Lindseay, Janette, \n",
+    "Charlson, Robert J., and Peterson, Thomas C., Asymmetric Trends of\n",
+    "Daily Maximum and Minimum Temperature . Papers in Natural Resources (1993). \n",
+    "185.https://digitalcommons.unl.edu/natrespapers/185\n",
+    "\n",
+    "Liu, G., Guo, Y., Xia, H., Liu, X., Song, H., Yang, J., & Zhang, Y. \n",
+    "Increase asymmetric warming rates between daytime and nighttime temperatures \n",
+    "over global land during recent decades. Geophysical Research Letters, 51, \n",
+    "e2024GL112832 (2024). https://doi.org/10.1029/2024GL112832\n",
+    "\n",
+    "Zhong, Z., He, B., Chen, H.W. et al. Reversed asymmetric warming of \n",
+    "sub-diurnal temperature over land during recent decades. Nat Commun 14, \n",
+    "7189 (2023). https://doi.org/10.1038/s41467-023-43007-6"
    ]
   }
  ],
